test/fail/annotations-type.grace
type Name is ann = type {}
